Update Core Links and Pages Like Admin Blogs

--- a/public/assets/css/treck-min.css
+++ b/public/assets/css/treck-min.css
@@ -17467,3 +17467,7 @@ body.boxed-wrapper {
 .boxed-wrapper .stricky-header .main-menu__list>li+li {
     margin-left: 42px
 }
+
+.transition-this{
+    transition: all 1s ease;
+}
