--- a/public/admin-assets/css/styles.css
+++ b/public/admin-assets/css/styles.css
@@ -636,7 +636,7 @@
   --bs-dark-border-subtle: #5a6a85;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
-  --bs-font-sans-serif: "Plus Jakarta Sans", sans-serif;
+  --bs-font-sans-serif: "DM Sans", sans-serif;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
@@ -15876,7 +15876,7 @@ textarea.form-control-lg {
 }
 
 body {
-  font-family: "Plus Jakarta Sans", sans-serif !important;
+  font-family: "DM Sans", sans-serif !important;
 }
 
 .page-wrapper .body-wrapper > .container-fluid, .page-wrapper .body-wrapper > .container-sm, .page-wrapper .body-wrapper > .container-md, .page-wrapper .body-wrapper > .container-lg, .page-wrapper .body-wrapper > .container-xl, .page-wrapper .body-wrapper > .container-xxl {
@@ -24352,7 +24352,7 @@ body .minicolors-swatch::after {
 }
 
 body .daterangepicker {
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   border: 1px solid var(--bs-border-color);
 }
 body .daterangepicker td.active {
@@ -26409,4 +26409,8 @@ body .dp-nav.dp-nav-right::before {
   width: 200%;
   height: 200%;
   margin: 10px 0;
+}
+.swal-button.swal-button--confirm{
+ background-color: #427cba !important;
+    box-shadow: none !important;
 }
