--- a/public/assets/css/treck-min.css
+++ b/public/assets/css/treck-min.css
@@ -1,5 +1,5 @@
 :root {
-    --treck-font: 'Plus Jakarta Sans', sans-serif, sans-serif;
+    --treck-font: "Manrope", sans-serif;
     --treck-gray: #727272;
     --treck-gray-rgb: 114, 114, 114;
     --treck-white: #ffffff;
@@ -3552,7 +3552,7 @@ ul {
 }
 
 .about-one__badge img {
-    width: auto
+    width: 205px
 }
 
 .about-one__right {
