--- a/public/admin-assets/css/styles.css
+++ b/public/admin-assets/css/styles.css
@@ -72,7 +72,7 @@
 
 [data-bs-theme=dark] .form-select:focus,
 [data-bs-theme=dark] .form-control:focus {
-  border-color: #5d87ff !important;
+  border-color: #00563f !important;
 }
 
 [data-bs-theme=dark] input::file-selector-button {
@@ -468,10 +468,10 @@
 
 [data-bs-theme=light][data-color-theme=Blue_Theme]:root,
 [data-bs-theme=dark][data-color-theme=Blue_Theme]:root {
-  --bs-primary: #5d87ff;
+  --bs-primary: #00563f;
   --bs-primary-rgb: 93, 135, 255;
   --bs-light-primary: rgba(93, 135, 255, 0.1);
-  --bs-primary-bg-subtle: rgba(93, 135, 255, 0.1);
+  --bs-primary-bg-subtle: rgba(93, 255, 144, 0.1);
   --bs-secondary: #49beff;
   --bs-secondary-rgb: 73, 190, 255;
   --bs-light-secondary: rgba(73, 190, 255, 0.1);
@@ -480,8 +480,8 @@
 
 [data-bs-theme=light][data-color-theme=Blue_Theme]:root .btn-primary,
 [data-bs-theme=dark][data-color-theme=Blue_Theme]:root .btn-primary {
-  --bs-btn-bg: #5d87ff;
-  --bs-btn-border-color: #5d87ff;
+  --bs-btn-bg: #00563f;
+  --bs-btn-border-color: #00563f;
   --bs-btn-hover-bg: #4f73d9;
   --bs-btn-hover-border-color: #4f73d9;
 }
@@ -641,7 +641,7 @@
  */
 :root,
 [data-bs-theme=light] {
-  --bs-blue: #5d87ff;
+  --bs-blue: #00563f;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
@@ -664,7 +664,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #5d87ff;
+  --bs-primary: #00563f;
   --bs-secondary: #49beff;
   --bs-success: #13deb9;
   --bs-info: #539bff;
@@ -686,7 +686,7 @@
   --bs-muted-rgb: 90, 106, 133;
   --bs-indigo-rgb: 102, 16, 242;
   --bs-light-indigo-rgb: 235, 243, 254;
-  --bs-primary-text-emphasis: shade-color(#5d87ff, 60%);
+  --bs-primary-text-emphasis: shade-color(#00563f, 60%);
   --bs-secondary-text-emphasis: shade-color(#49beff, 60%);
   --bs-success-text-emphasis: shade-color(#13deb9, 60%);
   --bs-info-text-emphasis: shade-color(#539bff, 60%);
@@ -697,7 +697,7 @@
   --bs-primary-bg-subtle: #ecf2ff;
   --bs-secondary-bg-subtle: #e8f7ff;
   --bs-success-bg-subtle: #e6fffa;
-  --bs-info-bg-subtle: #ebf3fe;
+  --bs-info-bg-subtle: #ebfef5;
   --bs-warning-bg-subtle: #fef5e5;
   --bs-danger-bg-subtle: #fbf2ef;
   --bs-light-bg-subtle: #f6f9fc;
@@ -737,7 +737,7 @@
   --bs-link-color: #2a3547;
   --bs-link-color-rgb: 42, 53, 71;
   --bs-link-decoration: underline;
-  --bs-link-hover-color: #5d87ff;
+  --bs-link-hover-color: #00563f;
   --bs-link-hover-color-rgb: 93, 135, 255;
   --bs-code-color: #d63384;
   --bs-highlight-color: #5a6a85;
@@ -808,7 +808,7 @@
   --bs-dark-border-subtle: #343a40;
   --bs-heading-color: inherit;
   --bs-link-color: #7c8fac;
-  --bs-link-hover-color: #5d87ff;
+  --bs-link-hover-color: #00563f;
   --bs-link-color-rgb: 124, 143, 172;
   --bs-link-hover-color-rgb: 93, 135, 255;
   --bs-code-color: #e685b5;
@@ -3617,8 +3617,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input:checked {
-  background-color: #5d87ff;
-  border-color: #5d87ff;
+  background-color: #00563f;
+  border-color: #00563f;
 }
 
 .form-check-input:checked[type=checkbox] {
@@ -3630,8 +3630,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #5d87ff;
-  border-color: #5d87ff;
+  background-color: #00563f;
+  border-color: #00563f;
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -3740,7 +3740,7 @@ textarea.form-control-lg {
   margin-top: -0.25rem;
   -webkit-appearance: none;
   appearance: none;
-  background-color: #5d87ff;
+  background-color: #00563f;
   border: 0;
   border-radius: 1rem;
   box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -3775,7 +3775,7 @@ textarea.form-control-lg {
   height: 1rem;
   -moz-appearance: none;
   appearance: none;
-  background-color: #5d87ff;
+  background-color: #00563f;
   border: 0;
   border-radius: 1rem;
   box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -4370,8 +4370,8 @@ fieldset:disabled .btn {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #5d87ff;
-  --bs-btn-border-color: #5d87ff;
+  --bs-btn-bg: #00563f;
+  --bs-btn-border-color: #00563f;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #4f73d9;
   --bs-btn-hover-border-color: #4a6ccc;
@@ -4381,8 +4381,8 @@ fieldset:disabled .btn {
   --bs-btn-active-border-color: #4665bf;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #5d87ff;
-  --bs-btn-disabled-border-color: #5d87ff;
+  --bs-btn-disabled-bg: #00563f;
+  --bs-btn-disabled-border-color: #00563f;
 }
 
 .btn-secondary {
@@ -4556,19 +4556,19 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #5d87ff;
-  --bs-btn-border-color: #5d87ff;
+  --bs-btn-color: #00563f;
+  --bs-btn-border-color: #00563f;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #5d87ff;
-  --bs-btn-hover-border-color: #5d87ff;
+  --bs-btn-hover-bg: #00563f;
+  --bs-btn-hover-border-color: #00563f;
   --bs-btn-focus-shadow-rgb: 93, 135, 255;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #5d87ff;
-  --bs-btn-active-border-color: #5d87ff;
+  --bs-btn-active-bg: #00563f;
+  --bs-btn-active-border-color: #00563f;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #5d87ff;
+  --bs-btn-disabled-color: #00563f;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #5d87ff;
+  --bs-btn-disabled-border-color: #00563f;
   --bs-gradient: none;
 }
 
@@ -5363,8 +5363,8 @@ fieldset:disabled .btn {
   --bs-nav-tabs-border-radius: 10px;
   --bs-nav-tabs-link-hover-border-color: var(--bs-secondary-bg) var(--bs-secondary-bg) var(--bs-border-color);
   --bs-nav-tabs-link-active-color: #fff;
-  --bs-nav-tabs-link-active-bg: #5d87ff;
-  --bs-nav-tabs-link-active-border-color: var(--bs-border-color) var(--bs-border-color) #5d87ff;
+  --bs-nav-tabs-link-active-bg: #00563f;
+  --bs-nav-tabs-link-active-border-color: var(--bs-border-color) var(--bs-border-color) #00563f;
   border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
 }
 
@@ -5397,7 +5397,7 @@ fieldset:disabled .btn {
 .nav-pills {
   --bs-nav-pills-border-radius: var(--bs-border-radius);
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #5d87ff;
+  --bs-nav-pills-link-active-bg: #00563f;
 }
 
 .nav-pills .nav-link {
@@ -6379,8 +6379,8 @@ fieldset:disabled .btn {
   --bs-pagination-focus-bg: var(--bs-secondary-bg);
   --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(93, 135, 255, 0.25);
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: #5d87ff;
-  --bs-pagination-active-border-color: #5d87ff;
+  --bs-pagination-active-bg: #00563f;
+  --bs-pagination-active-border-color: #00563f;
   --bs-pagination-disabled-color: var(--bs-secondary-color);
   --bs-pagination-disabled-bg: var(--bs-secondary-bg);
   --bs-pagination-disabled-border-color: var(--bs-border-color);
@@ -6625,7 +6625,7 @@ fieldset:disabled .btn {
   --bs-progress-border-radius: var(--bs-border-radius);
   --bs-progress-box-shadow: var(--bs-box-shadow-inset);
   --bs-progress-bar-color: #fff;
-  --bs-progress-bar-bg: #5d87ff;
+  --bs-progress-bar-bg: #00563f;
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: var(--bs-progress-height);
@@ -6693,8 +6693,8 @@ fieldset:disabled .btn {
   --bs-list-group-disabled-color: var(--bs-secondary-color);
   --bs-list-group-disabled-bg: var(--bs-body-bg);
   --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: #5d87ff;
-  --bs-list-group-active-border-color: #5d87ff;
+  --bs-list-group-active-bg: #00563f;
+  --bs-list-group-active-border-color: #00563f;
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -19526,7 +19526,7 @@ html[data-layout=horizontal] .body-wrapper>.container-xxl {
 }
 
 .customizer-box.color-pallete label .color-box.skin-1 {
-  background-color: #5d87ff;
+  background-color: #00563f;
 }
 
 .customizer-box.color-pallete label .color-box.skin-2 {
@@ -25055,7 +25055,7 @@ html[dir=rtl] .border-start.border-2.border-danger {
 }
 
 html[dir=rtl] .border-start.border-2.border-primary {
-  border-right: 2px solid #5d87ff !important;
+  border-right: 2px solid #00563f !important;
   border-left: 0 !important;
 }
 
