--- a/public/assets/css/treck-min.css
+++ b/public/assets/css/treck-min.css
@@ -1,5 +1,5 @@
 :root {
-    --treck-font: "Manrope", sans-serif;
+    --treck-font: "Satoshi", sans-serif;
     --treck-gray: #727272;
     --treck-gray-rgb: 114, 114, 114;
     --treck-white: #ffffff;
