--- a/public/assets/css/treck-min.css
+++ b/public/assets/css/treck-min.css
@@ -1,17 +1,19 @@
 :root {
-    --treck-font: "Satoshi", sans-serif;
+    --treck-font: 'Plus Jakarta Sans', sans-serif;
     --treck-gray: #727272;
     --treck-gray-rgb: 114, 114, 114;
     --treck-white: #ffffff;
     --treck-white-rgb: 255, 255, 255;
-    --treck-base: #17a753;
+    --treck-base: #e20935;
     --treck-base-rgb: 226, 9, 53;
     --treck-black: #16171a;
     --treck-black-rgb: 22, 23, 26;
     --treck-primary: #f2edeb;
     --treck-primary-rgb: 242, 237, 235;
     --treck-bdr-color: #e3dbd8;
-    --treck-bdr-color-rgb: 227, 219, 216
+    --treck-bdr-color-rgb: 227, 219, 216;
+    --treck-update-color: #fcc9d3;
+    --treck-stats-color: -webkit-linear-gradient(180deg, rgb(255, 254, 254) 0%, rgb(226, 28, 28) 100%);
 }
 
 .row {
@@ -388,24 +390,6 @@ ul {
     text-align: center
 }
 
-.preloader__image {
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    -webkit-animation-name: flipInY;
-    animation-name: flipInY;
-    -webkit-animation-duration: 2s;
-    animation-duration: 2s;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    background-image: url(../custom/resources/hetlogo.png);
-    filter: invert(1);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 100px auto;
-    width: 100%;
-    height: 100%
-}
-
 .scroll-to-top {
     display: inline-block;
     width: 50px;
@@ -558,7 +542,7 @@ ul {
 .main-menu__update-text {
     font-size: 14px;
     font-weight: 600;
-    color: #c9fcd0;
+    color: var(--treck-update-color);
     line-height: 24px
 }
 
@@ -619,7 +603,7 @@ ul {
 
 .main-menu__social-title {
     font-size: 14px;
-    color: #c9fcd0;
+    color: var(--treck-update-color);
     font-weight: 600;
     line-height: 24px
 }
@@ -4075,9 +4059,9 @@ ul {
     left: 0;
     right: 0;
     height: 1px;
-    background-image: -moz-linear-gradient(180deg, rgb(255, 254, 254) 0%, rgb(28, 226, 53) 100%);
-    background-image: -webkit-linear-gradient(180deg, rgb(255, 254, 254) 0%, rgb(28, 226, 53) 100%);
-    background-image: -ms-linear-gradient(180deg, rgb(255, 254, 254) 0%, rgb(28, 226, 53) 100%)
+    background-image: var(--treck-stats-color);
+    background-image: var(--treck-stats-color);
+    background-image: var(--treck-stats-color)
 }
 
 .counter-one__single:after {
@@ -4087,9 +4071,9 @@ ul {
     left: 0;
     right: 0;
     height: 1px;
-    background-image: -moz-linear-gradient(180deg, rgb(255, 254, 254) 0%, rgb(28, 226, 53) 100%);
-    background-image: -webkit-linear-gradient(180deg, rgb(255, 254, 254) 0%, rgb(28, 226, 53) 100%);
-    background-image: -ms-linear-gradient(180deg, rgb(255, 254, 254) 0%, rgb(28, 226, 53) 100%)
+    background-image: var(--treck-stats-color);
+    background-image: var(--treck-stats-color);
+    background-image: var(--treck-stats-color)
 }
 
 .counter-one__icon {
@@ -15418,7 +15402,7 @@ ul {
     position: relative;
     display: flex;
     align-items: center;
-    flex-wrap: wrap
+    /* flex-wrap: wrap */
 }
 
 .location-one__tab-content-img {
@@ -17496,4 +17480,8 @@ body.boxed-wrapper {
 
 .bg-base {
     background: var(--treck-base);
+}
+
+.mx-w-370 {
+    width: 320px;
 }
