--- a/public/admin-assets/css/styles.css
+++ b/public/admin-assets/css/styles.css
@@ -31363,3 +31363,65 @@ body .dp-nav.dp-nav-right::before {
   height: 600px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+
+.custom-switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 24px;
+}
+
+.custom-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.custom-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .4s;
+}
+
+.custom-slider::before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: .4s;
+}
+
+.custom-switch input:checked+.custom-slider {
+  background-color: #00563f;
+}
+
+.custom-switch input:focus+.custom-slider {
+  box-shadow: 0 0 1px #00563f;
+}
+
+.custom-switch input:checked+.custom-slider::before {
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.custom-slider.custom-round {
+  border-radius: 34px;
+}
+
+.custom-slider.custom-round::before {
+  border-radius: 50%;
+}
+
+.z-3000 {
+  position: relative;
+  z-index: 9999;
+}
